# COCOHRIW_pointing_navigation

./: README.md
kinect_azure_publisher/: CMakeLists.txt  package.xml
kinect_azure_publisher/src/: kinect_publisher.cpp
mozek_decider/: CMakeLists.txt  package.xml
mozek_decider/msg/: AngleDistance.msg
mozek_decider/src/: decider.cpp  intersection_library.hpp
robot_mover_listener/: CMakeLists.txt
robot_mover_listener/msg/: AngleDistance.msg
robot_mover_listener/src/: nic_package.xml  robot_mover.cpp
robot_mover_listener/src/iRobot_Create/: Roomba.cpp  Roomba.h  Tserial_event.cpp  Tserial_event.h  iCreateDef.cpp  iCreateDef.h
tiago_mover/: CMakeLists.txt  package.xml
tiago_mover/scripts/: tiago_mover.py  tiago_mover_v01.py  tiago_mover_v02.py
